tests/lean/mismatch.lean.expected.out
mismatch.lean:3:7: error: type mismatch at application
  @id ℕ 1
term
  1
has type
  num
but is expected to have type
  ℕ
