tests/lean/mismatch.lean
definition id {A : Type} {a : A} := a

check @id nat 1
